@@ -22,6 +22,7 @@ import java.io.DataInputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.security.GeneralSecurityException;
 import java.security.MessageDigest;
 import java.util.*;
@@ -81,11 +82,12 @@ public class ZeroconfServer implements Closeable {
     private final DiffieHellman keys;
     private final JmDNS[] instances;
     private volatile Session session;
-    private List<SessionListener> sessionListeners;
+    private final List<SessionListener> sessionListeners;
 
     private ZeroconfServer(Session.Inner inner, Configuration conf) throws IOException {
         this.inner = inner;
         this.keys = new DiffieHellman(inner.random);
+        this.sessionListeners = new ArrayList<>();
 
         int port = conf.zeroconfListenPort();
         if (port == -1)
@@ -136,8 +138,6 @@ public class ZeroconfServer implements Closeable {
             } catch (IOException ignored) {
             }
         }));
-
-        sessionListeners = new ArrayList<>();
     }
 
     @NotNull
@@ -323,8 +323,12 @@ public class ZeroconfServer implements Closeable {
         }
     }
 
-    public void addSessionListener(SessionListener listener) {
+    public void addSessionListener(@NotNull SessionListener listener) {
         sessionListeners.add(listener);
+    }
+
+    public void removeSessionListener(@NotNull SessionListener listener) {
+        sessionListeners.remove(listener);
     }
 
     public interface Configuration {
@@ -337,7 +341,7 @@ public class ZeroconfServer implements Closeable {
     }
 
     public interface SessionListener {
-        void sessionChanged(Session session);
+        void sessionChanged(@NotNull Session session);
     }
 
     private class HttpRunner implements Runnable, Closeable {
@@ -415,7 +419,7 @@ public class ZeroconfServer implements Closeable {
                 Map<String, String> params = new HashMap<>(pairs.length);
                 for (String pair : pairs) {
                     String[] split = Utils.split(pair, '=');
-                    params.put(URLDecoder.decode(split[0], "UTF-8"), URLDecoder.decode(split[1], "UTF-8"));
+                    params.put(URLDecoder.decode(split[0], StandardCharsets.UTF_8), URLDecoder.decode(split[1], StandardCharsets.UTF_8));
                 }
 
                 String action = params.get("action");
